--- a/nso_demo/nso_snmp_service.yml
+++ b/nso_demo/nso_snmp_service.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure NSO from Ansible
-  hosts: cisco
+  hosts: localhost
   gather_facts: no
 
   vars:
@@ -21,9 +21,9 @@
         data:
           tailf-ncs:services:
             nso-snmp:nso-snmp:
-              - snmp_ro: "{{ input_snmp_ro }}"
+              - snmp_ro: "{{ input_snmp_ro | default("joonsnmp" )}}"
                 nso-snmp:device:
-                  - "{{ inventory_hostname }}"
+                  - "{{ nso_device : default("rtr0") }}"
       changed_when: False
       register: r_sync
 
