--- a/iac_demo.yaml
+++ b/iac_demo.yaml
@@ -18,19 +18,19 @@
 
 
   tasks:
-    - name: TASKS FOR JUNOS
-      block:
-
-      - name: TEMPLATE OUT THE JUNOS CONFIGS
-        template:
-          src: junos_snmp.j2
-          dest: ./junos_snmp.cfg
-
-      - name: ENSURE THAT JUNOS SNMP CONFIGS ARE PRESENT
-        junos_config:
-          src: ./junos_snmp.cfg
-
-      when: target == 'junos' and ansible_network_os == 'junos'
+    # - name: TASKS FOR JUNOS
+    #   block:
+    #
+    #   - name: TEMPLATE OUT THE JUNOS CONFIGS
+    #     template:
+    #       src: junos_snmp.j2
+    #       dest: ./junos_snmp.cfg
+    #
+    #   - name: ENSURE THAT JUNOS SNMP CONFIGS ARE PRESENT
+    #     junos_config:
+    #       src: ./junos_snmp.cfg
+    #
+    #   when: target == 'junos' and ansible_network_os == 'junos'
 
     - name: ENSURE THAT ARISTA SNMP CONFIGS ARE PRESENT
       eos_config:
@@ -61,17 +61,17 @@
 
 
   tasks:
-
-    - name: TEMPLATE OUT THE JUNOS CONFIGS
-      template:
-        src: junos_snmp_backout.j2
-        dest: ./junos_snmp_backout.cfg
-
-    - name: ENSURE THAT JUNOS SNMP CONFIGS ARE ABSENT
-      junos_config:
-        src: ./junos_snmp_backout.cfg
-      ignore_errors: True
-      when: ansible_network_os == 'junos'
+    #
+    # - name: TEMPLATE OUT THE JUNOS CONFIGS
+    #   template:
+    #     src: junos_snmp_backout.j2
+    #     dest: ./junos_snmp_backout.cfg
+    #
+    # - name: ENSURE THAT JUNOS SNMP CONFIGS ARE ABSENT
+    #   junos_config:
+    #     src: ./junos_snmp_backout.cfg
+    #   ignore_errors: True
+    #   when: ansible_network_os == 'junos'
 
     - name: ENSURE THAT ARISTA SNMP CONFIGS ARE ABSENT
       eos_config:
