--- a/iac_demo.yaml
+++ b/iac_demo.yaml
@@ -18,29 +18,25 @@
 
 
   tasks:
-    # - name: TASKS FOR JUNOS
-    #   block:
-    #
-    #   - name: TEMPLATE OUT THE JUNOS CONFIGS
-    #     template:
-    #       src: junos_snmp.j2
-    #       dest: ./junos_snmp.cfg
-    #
-    #   - name: ENSURE THAT JUNOS SNMP CONFIGS ARE PRESENT
-    #     junos_config:
-    #       src: ./junos_snmp.cfg
-    #
-    #   when: target == 'junos' and ansible_network_os == 'junos'
+    - name: TEMPLATE OUT THE JUNOS CONFIGS
+      template:
+        src: junos_snmp.j2
+        dest: ./junos_snmp.cfg
+
+    - name: ENSURE THAT JUNOS SNMP CONFIGS ARE PRESENT
+      junos_config:
+        src: ./junos_snmp.cfg
+      when: ansible_network_os == 'junos'
 
     - name: ENSURE THAT ARISTA SNMP CONFIGS ARE PRESENT
       eos_config:
         src: eos_snmp.j2
-      when: target == 'eos' and ansible_network_os == 'eos'
+      when: ansible_network_os == 'eos'
 
     - name: ENSURE THAT CISCO SNMP CONFIGS ARE PRESENT
       ios_config:
         src: ios_snmp.j2
-      when: target == 'ios' and ansible_network_os == 'ios'
+      when: ansible_network_os == 'ios'
 
 - name: DEMO MULTI VENDOR BACKOUT
   hosts: all
@@ -61,17 +57,17 @@
 
 
   tasks:
-    #
-    # - name: TEMPLATE OUT THE JUNOS CONFIGS
-    #   template:
-    #     src: junos_snmp_backout.j2
-    #     dest: ./junos_snmp_backout.cfg
-    #
-    # - name: ENSURE THAT JUNOS SNMP CONFIGS ARE ABSENT
-    #   junos_config:
-    #     src: ./junos_snmp_backout.cfg
-    #   ignore_errors: True
-    #   when: ansible_network_os == 'junos'
+
+    - name: TEMPLATE OUT THE JUNOS CONFIGS
+      template:
+        src: junos_snmp_backout.j2
+        dest: ./junos_snmp_backout.cfg
+
+    - name: ENSURE THAT JUNOS SNMP CONFIGS ARE ABSENT
+      junos_config:
+        src: ./junos_snmp_backout.cfg
+      ignore_errors: True
+      when: ansible_network_os == 'junos'
 
     - name: ENSURE THAT ARISTA SNMP CONFIGS ARE ABSENT
       eos_config:
